cmake_minimum_required(VERSION 3.16)
project(Straight)

set(STRAIGHT_SOURCES_PATH ${CMAKE_CURRENT_LIST_DIR}/src/)
set(STRAIGHT_INCLUDE_PATH ${CMAKE_CURRENT_LIST_DIR}/include/)
set(STRAIGHT_DEFINITIONS -DWITH_STRAIGHT_DEBUG)
set(STRAIGHT_FEATURES cxx_std_17)

set(STRAIGHT_SOURCES 
${STRAIGHT_SOURCES_PATH}Renderer.cpp
${STRAIGHT_SOURCES_PATH}Application.cpp
${STRAIGHT_SOURCES_PATH}Window.cpp
${STRAIGHT_SOURCES_PATH}Entry.cpp)

add_executable(STRAIGHT_TARGET WIN32 ${STRAIGHT_SOURCES})

target_include_directories(STRAIGHT_TARGET PRIVATE ${STRAIGHT_INCLUDE_PATH})
target_compile_definitions(STRAIGHT_TARGET PRIVATE ${STRAIGHT_DEFINITIONS})
target_compile_features(STRAIGHT_TARGET PRIVATE ${STRAIGHT_FEATURES})